config/etc/ufw/user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow any 53 0.0.0.0/0 any 0.0.0.0/0 DNS - out
-A ufw-user-output -p tcp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'
-A ufw-user-output -p udp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'

### tuple ### allow tcp 6881 0.0.0.0/0 any 0.0.0.0/0 qBittorrent - in
-A ufw-user-input -p tcp --dport 6881 -j ACCEPT -m comment --comment 'dapp_qBittorrent'

### tuple ### allow tcp 6881 0.0.0.0/0 any 0.0.0.0/0 qBittorrent - out
-A ufw-user-output -p tcp --dport 6881 -j ACCEPT -m comment --comment 'dapp_qBittorrent'

### tuple ### allow udp 67:68 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p udp -m multiport --dports 67:68 -j ACCEPT

### tuple ### allow udp 3478,4379,4380,27000:27100 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 3478,4379,4380,27000:27100 -j ACCEPT

### tuple ### allow udp 3478,4379,4380,27000:27100 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p udp -m multiport --dports 3478,4379,4380,27000:27100 -j ACCEPT

### tuple ### allow tcp 27015:27030,27036 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 27015:27030,27036 -j ACCEPT

### tuple ### allow tcp 27015:27030,27036 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp -m multiport --dports 27015:27030,27036 -j ACCEPT

### tuple ### allow udp 50000:65535 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p udp -m multiport --dports 50000:65535 -j ACCEPT

### tuple ### allow any 3020 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 3020 -j ACCEPT
-A ufw-user-output -p udp --dport 3020 -j ACCEPT

### tuple ### allow tcp 80,443 127.0.0.1 any 127.0.0.1 in
-A ufw-user-input -p tcp -m multiport --dports 80,443 -d 127.0.0.1 -s 127.0.0.1 -j ACCEPT

### tuple ### allow tcp 445,5000,5001 192.168.0.0/16 any 192.168.0.0/16 out
-A ufw-user-output -p tcp -m multiport --dports 445,5000,5001 -d 192.168.0.0/16 -s 192.168.0.0/16 -j ACCEPT

### tuple ### allow any 9418 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 9418 -j ACCEPT
-A ufw-user-output -p udp --dport 9418 -j ACCEPT

### tuple ### allow tcp 1445 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1445 -j ACCEPT

### tuple ### allow udp 123 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p udp --dport 123 -j ACCEPT

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 22 -j ACCEPT

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 443 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-output -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
