config/etc/ufw/user6.rules
*filter
:ufw6-user-input - [0:0]
:ufw6-user-output - [0:0]
:ufw6-user-forward - [0:0]
:ufw6-before-logging-input - [0:0]
:ufw6-before-logging-output - [0:0]
:ufw6-before-logging-forward - [0:0]
:ufw6-user-logging-input - [0:0]
:ufw6-user-logging-output - [0:0]
:ufw6-user-logging-forward - [0:0]
:ufw6-after-logging-input - [0:0]
:ufw6-after-logging-output - [0:0]
:ufw6-after-logging-forward - [0:0]
:ufw6-logging-deny - [0:0]
:ufw6-logging-allow - [0:0]
:ufw6-user-limit - [0:0]
:ufw6-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow tcp 6881 ::/0 any ::/0 qBittorrent - in
-A ufw6-user-input -p tcp --dport 6881 -j ACCEPT -m comment --comment 'dapp_qBittorrent'

### tuple ### allow tcp 6881 ::/0 any ::/0 qBittorrent - out
-A ufw6-user-output -p tcp --dport 6881 -j ACCEPT -m comment --comment 'dapp_qBittorrent'

### tuple ### allow udp 67:68 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 67:68 -j ACCEPT

### tuple ### allow udp 3478,4379,4380,27000:27100 ::/0 any ::/0 in
-A ufw6-user-input -p udp -m multiport --dports 3478,4379,4380,27000:27100 -j ACCEPT

### tuple ### allow udp 3478,4379,4380,27000:27100 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 3478,4379,4380,27000:27100 -j ACCEPT

### tuple ### allow tcp 27015:27030,27036 ::/0 any ::/0 in
-A ufw6-user-input -p tcp -m multiport --dports 27015:27030,27036 -j ACCEPT

### tuple ### allow tcp 27015:27030,27036 ::/0 any ::/0 out
-A ufw6-user-output -p tcp -m multiport --dports 27015:27030,27036 -j ACCEPT

### tuple ### allow udp 50000:65535 ::/0 any ::/0 out
-A ufw6-user-output -p udp -m multiport --dports 50000:65535 -j ACCEPT

### tuple ### allow any 3020 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 3020 -j ACCEPT
-A ufw6-user-output -p udp --dport 3020 -j ACCEPT

### tuple ### allow any 53 ::/0 any ::/0 DNS - out
-A ufw6-user-output -p tcp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'
-A ufw6-user-output -p udp --dport 53 -j ACCEPT -m comment --comment 'dapp_DNS'

### tuple ### allow any 9418 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 9418 -j ACCEPT
-A ufw6-user-output -p udp --dport 9418 -j ACCEPT

### tuple ### allow tcp 1445 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 1445 -j ACCEPT

### tuple ### allow udp 123 ::/0 any ::/0 out
-A ufw6-user-output -p udp --dport 123 -j ACCEPT

### tuple ### allow tcp 80 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 80 -j ACCEPT

### tuple ### allow tcp 22 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 22 -j ACCEPT

### tuple ### allow tcp 443 ::/0 any ::/0 out
-A ufw6-user-output -p tcp --dport 443 -j ACCEPT

### END RULES ###

### LOGGING ###
-A ufw6-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-output -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw6-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw6-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw6-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw6-user-limit -j REJECT
-A ufw6-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
